Adding mobile adaptation to the Site - Freshy Bar day#2

--- a/freshy-bar-project/css/style.css
+++ b/freshy-bar-project/css/style.css
@@ -80,7 +80,7 @@ ul {
 }
 /* header */
  .header {
-     padding: 32px 0;
+     padding: 36px 0;
 }
  .header__container {
      display: flex;
@@ -97,11 +97,13 @@ ul {
 }
  .header__btn-order {
      margin-right: 32px;
+     width: 24px;
+     height: 24px;
 }
  .header__btn {
      display: block;
 }
-/* hearo section */
+/* hero section */
  .hearo {
      padding: 30px 0 85px;
 }
@@ -114,13 +116,16 @@ ul {
 }
  .hero__cups {
      display: flex;
+     align-items: flex-end;
      gap: 20px;
      padding-top: 270px;
 }
  .hero__cup {
      position: relative;
-     width: 300px;
-     height: 382px;
+     /* width: 300px; */
+     width: 100%;
+     aspect-ratio: 1/1;
+     /* height: 382px; */
      border-radius: 24px;
      padding-top: 200px;
 }
@@ -129,6 +134,7 @@ ul {
 }
  .hero__cup-orange {
      background-color: #FFB72A;
+     align-self: flex-start;
      margin-top: -70px;
 }
  .hero__cup-green {
@@ -136,7 +142,9 @@ ul {
 }
  .hero__img {
      position: absolute;
-     bottom: 50px;
+     width: 55%;
+     /* bottom: 50px; */
+     bottom: 13%;
      left: 50%;
      transform: translateX(-50%);
 }
@@ -180,26 +188,31 @@ ul {
 }
  .cocktail__text {
      display: flex;
+     flex-wrap: wrap;
      justify-content: space-between;
      align-items:center;
-     margin-bottom: 2px;
+     margin-bottom: 10px; 
+     gap: 2px 5px;
 }
  .cocktail__title {
      font-weight: 400;
-     margin-right: 5px;
-     font-size: 18px;
+     /* margin-right: 5px; */
+     /* font-size: 18px; */
+     font-size: inherit;
 }
  .cocktail__price {
      font-weight: 600;
 }
  .cocktail__size {
+    flex: 0 0 100%;
      font-weight: 600;
      font-size: 12px;
      color: #c1c1c1;
     /* margin-left: auto;
      */
-     align-self: flex-end;
-     margin-bottom: 10px;
+     text-align: end;
+     /* align-self: flex-end; */
+   /*  margin-bottom: 10px; убрали на 41Ж49 мин*/
 }
  .cocktail__btn {
      margin-top: auto;
@@ -225,6 +238,7 @@ ul {
  .footer__developer {
      grid-area: developer;
      justify-self: end;
+     min-width: 230px;
 }
  .fooret__developer-item {
      margin-bottom: 10px;
@@ -233,4 +247,164 @@ ul {
      margin-bottom: 0px;
 }
  .footer__developer-link {
+}
+
+@media (max-width: 1240px) {
+    body {
+        background-image: url('../img/bg-laptop.svg');
+    }
+    .container {
+        --width: 880px;
+    }
+    .hero {
+        padding-bottom: 30px;
+    }
+    .hero__title {
+        font-style: 64px;
+        max-width: 680px;
+    }
+    .hero__cups {
+        padding-top: 216px;
+
+    }
+    .hero__cup-orange {
+        margin-top: -50px;
+    }
+    .goods__list {
+        grid-template-columns: repeat(3, 280px);
+    }
+}
+
+@media (max-width: 940px) {
+ body {
+        background-image: url('../img/bg-tablet.svg');
+        font-size: 14px;
+    }
+    .container {
+         --width: 608px;
+         --padding: 15px;
+    }
+    .btn {
+        box-shadow: 0px 2px 10px 0px #FA5A5A;
+        padding: 8px 20px;
+    }
+    .header {
+        padding: 34px 0 20px;
+    }
+    .header__btn-order {
+        margin-right: 24px;
+    }
+
+    .hero {
+        padding-bottom: 46px;
+    }
+    .hero__title {
+        font-size: 44px;
+        max-width: 462px;
+    }
+
+    .hero__cups {
+        padding-top: 112px;
+        gap: 13px;
+    }
+    .hero__cup {
+        border-radius: 12px;
+    }
+    .hero__img {
+        bottom: 10%;
+    }
+
+    .goods {
+        padding-top: 40px;
+        padding-bottom: 50px;
+    }
+
+    .goods__title {
+        font-size: 24px;
+        margin-bottom: 16px;
+    }
+    .goods__list {
+        grid-template-columns: repeat(auto-fit, minmax(140px, 1fr));  
+        gap: 16px;
+    }
+    .cocktail {
+        border-radius: 12px;
+        padding: 8px;
+    }
+    .cocktail__img {
+        border-radius: 12px;
+        margin-bottom: 8px;
+    }
+    .cocktail__content {
+        padding: 0;
+    }
+    .cocktail__text {
+        row-gap: 8px;
+        margin-bottom: 16px;
+    }
+    .cocktail__title {
+        flex: 0 0 100%;
+    }
+    .cocktail__size {
+        flex: auto;
+        font-size: 10px;
+    }
+
+    .footer {
+        padding-bottom: 24px;
+    }
+    
+    .footer__container {
+gap: 24px;
+    }
+    .fooret__developer-item {
+       margin-bottom: 6px; 
+    }
+}
+
+@media (max-width: 640px) { 
+ body {
+        background-image: url('../img/bg-mobile.svg');
+    }
+
+    .header {
+        padding: 31px 0;
+    }
+    .header__logo {
+        width: 120px;
+    }
+    
+    .header__btn {
+        display: none;
+    }
+    .header__btn-order {
+        margin-right: 0;
+    }
+
+    .hero {
+        padding-top: 0;
+        padding-bottom: 120px;
+    }
+    .hero__title {
+        font-size: 26px;
+    }
+    .hero__cups {
+        display: none;
+    }
+
+    .goods {
+        padding-top: 40px;
+        padding-bottom: 30px;
+    }
+    .goods__list {
+        gap: 10px;
+    }
+    .footer__logo {
+        width: 120px;
+    }
+    .footer__container {
+        grid-template-areas: 'logo' 'copyright' 'developer';
+        gap: 20px;
+    }
+
 }
