--- a/freshy-bar-project/css/style.css
+++ b/freshy-bar-project/css/style.css
@@ -187,14 +187,17 @@ ul {
      padding: 12px;
 }
  .cocktail__text {
-     display: flex;
-     flex-wrap: wrap;
+     /*display: flex;*/
+     display: grid;
+     grid-template-columns: 3fr 1fr;
+     /* flex-wrap: wrap;
      justify-content: space-between;
-     align-items:center;
+     align-items:center; */
      margin-bottom: 10px; 
      gap: 2px 5px;
 }
  .cocktail__title {
+    grid-row: 1/3; /*с первой по третью полоску - ряды для текста*/
      font-weight: 400;
      /* margin-right: 5px; */
      /* font-size: 18px; */
@@ -202,6 +205,7 @@ ul {
 }
  .cocktail__price {
      font-weight: 600;
+     text-align: end;
 }
  .cocktail__size {
     flex: 0 0 100%;
