--- a/freshy-bar-project/css/style.css
+++ b/freshy-bar-project/css/style.css
@@ -253,6 +253,142 @@ ul {
  .footer__developer-link {
 }
 
+/* модальное окно */
+
+.modal {
+    position: fixed;
+    inset: 0;  /* means top/bittom/right/left*/
+    background-color: rgba(0, 0, 0, 0.5);
+    cursor: pointer;
+    padding: 20px;
+    overflow-y: auto; /* для того чтобы появился скрол*/
+    display: none;
+}
+
+.modal__main {
+    /* position: relative; */
+     margin: auto; /*может центровать наш блок */
+    cursor: default;
+    width: 100%;
+    max-width: 780px;;
+}
+
+.order {
+    border-radius: 24px;
+    background-color: #F8E8E2;
+    box-shadow: 0px, 4px, 4px, 0px rgba(0, 0, 0, 0.25);
+    padding: 40px 60px;
+}
+.order__title {
+    font-size: 44px;
+    font-style: normal;
+    font-weight: 900;
+    margin-bottom: 40px;
+}
+.order__list {
+    margin-bottom: 40px;
+
+}
+.order__item {
+border-top: 1px solid #fff;
+padding-top: 16px;
+padding-bottom: 16px;
+display: grid;
+grid-template-columns: 70px 1fr min-content;
+gap: 12px;
+grid-template-areas: 
+"image info delete"
+"image info price";
+
+}
+
+.order__item:last-child {
+border-bottom: 1px solid #fff;
+padding-top: 16px;
+padding-bottom: 16px;
+display: grid;
+grid-template-columns: 70px 1fr min-content;
+gap: 12px;
+grid-template-areas: 
+"image info delete"
+"image info price";
+}
+.order__img {
+grid-area: image;
+max-width: 100%;
+}
+.order__info {
+grid-area: info;
+}
+.order__name {
+font-weight: 400;
+font-size: inherit;
+margin-bottom: 8px;
+}
+.order__topping-item {
+margin-bottom: 8px;
+color: #D5B4A8;
+font-size: 12px;
+font-weight: 600;
+}
+
+.order__topping-item:last-child {
+margin-bottom: 0;
+}
+.order__topping {
+
+}
+.order__item-delete {
+    grid-area: delete;
+    justify-self: end;
+    width: 24px;
+    height: 24px;
+    background-image: url(../img/delete.svg);
+
+}
+.order__item-price {
+    grid-area: price;
+    justify-self: end;
+    align-self: end;
+}
+.order__price {
+    display: flex;
+    justify-content: space-between;
+    margin-bottom: 40px;
+
+
+}
+.order__price-title {
+font-weight: 600;
+}
+.order__total-price {
+    font-weight: 600;
+
+}
+.order__form {
+display: grid;
+grid-template-columns: repeat(2, 1fr);
+gap: 32px 20px;
+}
+.order__label {
+    width: 100%;
+
+
+}
+.order__input {
+    width: 100%;
+height: 44px;
+padding: 0 16px;
+border-radius: 8px;
+background-color: #fff;
+border: none;
+
+}
+.order__submit {
+justify-self: end;
+grid-column: 2/3;
+}
+
 @media (max-width: 1240px) {
     body {
         background-image: url('../img/bg-laptop.svg');
