Added Styling the Form to the Site Freshy Bar - Day#4

--- a/freshy-bar-project/css/style.css
+++ b/freshy-bar-project/css/style.css
@@ -272,7 +272,14 @@ ul {
      margin: auto; /*может центровать наш блок */
     cursor: default;
     width: 100%;
-    max-width: 780px;;
+    
+}
+.modal__main-order {
+    max-width: 780px;
+}
+
+.modal__main-make {
+max-width: 640px;
 }
 
 .order {
@@ -389,6 +396,105 @@ border: none;
 .order__submit {
 justify-self: end;
 grid-column: 2/3;
+}
+
+
+.make {
+border-radius: 24px;
+background-color: #F8E8E2;
+box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.25);
+padding: 60px 40px;
+}
+
+.make__title {
+font-size: 44px;
+font-weight: 900;
+margin-bottom: 40px;
+}
+
+.make__form {
+display: flex;
+flex-direction: column;
+}
+
+.make__fieldset {
+margin: 0;
+padding: 0;
+border: 0;
+}
+
+.make__fieldset-ingredients {
+grid-area: ingredients;
+display: grid;
+grid-template-columns: repeat(3, 1fr);
+gap: 20px 55px;
+margin-bottom: 32px;
+}
+
+.make__wrap-add {
+    margin-bottom: 40px;
+    display: flex;
+    gap: 55px;
+}
+
+.make__fieldset-topping {
+width: 150px;
+display: grid;
+grid-template-columns: 1fr;
+gap: 20px;
+
+}
+
+.make__fieldset-cup {
+display: grid;
+grid-template-columns: 1fr;
+gap: 20px;
+}
+
+.make__legent{
+    color: #D5B4A8;
+    margin-bottom: 24px;
+}
+
+.make__upsale {
+    color: #d5b4a8;
+    font-size: 12px;
+}
+
+.make__footer {
+display: flex;
+align-items: center;
+gap: 30px;
+}
+
+.make__add-btn{
+min-width: 232px;
+
+}
+
+.make__total-price {
+font-weight: 600;
+}
+.make__total-size {
+color: #d5b4a8;
+text-align: right;
+font-size: 12px;
+}
+
+.checkbox {
+
+}
+
+.checkbox__input {
+
+}
+
+.radio {
+
+}
+
+.radio__input {
+    
 }
 
 @media (max-width: 1240px) {
